@@ -924,7 +924,7 @@ The OvmsVehicle object is the most comprehensive, and exposes several methods to
     Return the type of the currently loaded vehicle module
 - ``success = OvmsVehicle.Wakeup()``
     Wakeup the vehicle (return TRUE if successful)
-- ``success = OvmsVehicle.Homelink(button,durationms)``
+- ``success = OvmsVehicle.Homelink(button, durationms)``
     Fire the given homelink button
 - ``success = OvmsVehicle.ClimateControl(onoff)``
     Turn on/off climate control
@@ -981,6 +981,77 @@ The OvmsVehicle object is the most comprehensive, and exposes several methods to
         print(res.errortext);
       else
         print(res.response_hex);
+
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~
+OvmsVehicle Command Plugins
+~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+Most vehicles do not implement all standard vehicle commands. When trying to execute
+one of these, the system will respond with "not implemented". Using the ``OvmsVehicle``
+object, you can register your own handlers for these. This applies to the following
+functions:
+
+- ``OvmsVehicle.Wakeup()``
+- ``OvmsVehicle.Homelink(button, durationms)``
+- ``OvmsVehicle.ClimateControl(onoff)``
+- ``OvmsVehicle.Lock(pin)``
+- ``OvmsVehicle.Unlock(pin)``
+- ``OvmsVehicle.Valet(pin)``
+- ``OvmsVehicle.Unvalet(pin)``
+- ``OvmsVehicle.SetChargeMode(mode)``
+- ``OvmsVehicle.SetChargeCurrent(limit)``
+- ``OvmsVehicle.SetChargeTimer(onoff, start)``
+- ``OvmsVehicle.StartCharge()``
+- ``OvmsVehicle.StopCharge()``
+- ``OvmsVehicle.StartCooldown()``
+- ``OvmsVehicle.StopCooldown()``
+
+**Note:** this normally only works for commands not implemented by the vehicle.
+Vehicles **may** also allow custom handlers to replace their default implementation,
+ask a vehicle maintainer if you miss/need this option for your vehicle.
+
+To register your own command handler for any of these, simply assign a Javascript
+function to the respective ``OvmsVehicle`` property. Your custom function shall
+accept the same arguments as the native handler and return a boolean value to
+reflect success (``true``) or failure (``false``).
+
+**Example**
+
+A common use case for this is implementing your own variant of "Homelink", which is
+basically only available in hardware on Tesla Roadsters, yet accessible in the App
+for other vehicles as well as a means to execute other commands.
+
+The following example code shows how to register a custom "Homelink" handler doing
+an HTTP API call:
+
+.. code-block:: javascript
+
+  OvmsVehicle.Homelink = function(button, durationms) {
+    const debug = false;   // set to true to log full server response
+    const notify = false;  // set to true to enable failure push notification
+    const fndesc = "Homelink " + button;
+
+    HTTP.Request({
+      url: "https://your.api.server/action?button=" + button,
+      done: function() { print(fndesc + " OK"); },
+      fail: function() { const msg = fndesc + " FAILED: " + this.error; print(msg);
+        if (notify) OvmsNotify.Raise("alert", "homelink", msg); },
+      always: function() { if (debug) print(JSON.stringify(this.response||this)); }
+    });
+
+    return true;
+  }
+
+(Due to the HTTP request being asynchronous, the command function can only return
+true when called. Enable the push notification to get an alert on failure.)
+
+After running this code for a vehicle not implementing the homelink command itself,
+you can let the module do the HTTP API call by selecting one of the three button
+options in the App, as well as by executing the ``homelink`` shell command.
+
+To load this plugin automatically on boot, add the code to ``ovmsmain.js``, either
+inline or by loading a lib module (see `Persistent JavaScript`_).
 
 
 --------------
